# insurance-underwriting-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.claude/skills/context-7/: SKILL.md
configs/: __init__.py  model.py
docs/: data_exploration.md  setup.md
notebooks/: 01_data_exploration.ipynb  02_finetuning_dataset_review.ipynb  03_token_analysis.ipynb  04_test_dataset_review.ipynb
results/: baseline_evaluation.json  baseline_model.json  hyperparameters.json  token_analysis.json
scratchboard/: conversation.md  hyperparameters.md  phase1-user-stories.md  phase2-user-stories.md  phase3-user-stories.md  phase4-user-stories.md  phase5-user-stories.md  project.md  qwen-finetuning-format.md
scripts/: analyze_tokens.py  analyze_training.py  calculate_hyperparameters.py  create_splits.py  preprocess_data.py  run_geval_evaluation.py  run_inference.py  train.py
src/data/: dataloader.py  dataset_io.py  loader.py  preprocessing.py  splitting.py  tokenization.py
src/evaluation/: __init__.py  criterion.py  evaluator.py  geval_scorer.py  inference.py  judge_evaluator.py  judge_model_provider.py  model_provider.py  models.py  utils.py
src/logging/: __init__.py  setup.py
src/models/: __init__.py  model_loader.py
src/training/: __init__.py  callbacks.py  data.py  export.py  lora_config.py  trainer.py
src/utils/: memory.py
tests/: test_data_loader.py  test_dataloader.py  test_export.py  test_inference.py  test_judge_evaluator.py  test_logging.py  test_lora_config.py  test_model_loader.py  test_model_provider.py  test_preprocessing.py  test_run_geval_evaluation.py  test_setup.py  test_splitting.py  test_tokenization.py  test_trainer.py  test_training_data.py
