[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "configs"]

[project]
name = "insurance-underwriting-llm"
version = "0.1.0"
description = "Multi-modal RAG system for insurance underwriting with fine-tuned embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML dependencies
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    # Fine-tuning dependencies
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "litellm>=1.81.9",
]

[dependency-groups]
dev = [
    # Development tools
    "ruff>=0.1.9",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",

    # Jupyter for exploration
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tensorboard>=2.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/training/callbacks.py" = [
    "ARG002", # TrainerCallback interface requires these parameters
]
"*.ipynb" = [
    "I",     # isort (import sorting)
    "E401",  # multiple imports on one line
    "E402",  # module level import not at top of file
    "F401",  # imported but unused
    "B905",  # zip() without strict= parameter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
